--- a/Real-Estate-Project/server/views/auth/signup.hbs
+++ b/Real-Estate-Project/server/views/auth/signup.hbs
@@ -2,8 +2,12 @@
   <h2>Sign Up</h2>
   <form action="/auth/signup" method="POST">
 
-    <label> Username
-      <input type="text" name="username" placeholder="Your username" />
+    <label> First Name
+      <input type="text" name="username" placeholder="Please insert your first name" />
+    </label>
+
+    <label> Last Name
+      <input type="text" name="lastname" placeholder="Please insert your last name" />
     </label>
 
     <label> Email
