--- a/Real-Estate-Project/server/views/auth/signup.hbs
+++ b/Real-Estate-Project/server/views/auth/signup.hbs
@@ -3,11 +3,11 @@
   <form action="/auth/signup" method="POST">
 
     <label> First Name
-      <input type="text" name="username" placeholder="Please insert your first name" />
+      <input type="text" name="firstName" placeholder="Please insert your first name" />
     </label>
 
     <label> Last Name
-      <input type="text" name="lastname" placeholder="Please insert your last name" />
+      <input type="text" name="lastName" placeholder="Please insert your last name" />
     </label>
 
     <label> Email
