--- a/Real-Estate-Project/server/views/layout.hbs
+++ b/Real-Estate-Project/server/views/layout.hbs
@@ -18,7 +18,7 @@
 
         <div>
             <a href="/">Home</a>
-            <a href="/login">Log in</a>
+            <a href="/auth/login">Log in</a>
             <a href="/auth/signup">Create an accout</a>
         </div>
     </nav>
